SET (CMAKE_INCLUDE_CURRENT_DIR ON)
SET (CMAKE_AUTOMOC ON)
find_package (Qt5Core REQUIRED)
pkg_check_modules(JSON_CPP REQUIRED jsoncpp)

add_definitions(
  -DGETTEXT_PACKAGE=\"${PROJECT_NAME}\"
  -DGETTEXT_LOCALEDIR=\"${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LOCALEDIR}\"
)

add_library(${APPS_LIB_UNVERSIONED} SHARED
  apps-query.cpp
  apps-scope.cpp
)
set_target_properties(${APPS_LIB_UNVERSIONED} PROPERTIES PREFIX "")

include_directories(
  ${CMAKE_SOURCE_DIR}/libclickscope
  ${JSON_CPP_INCLUDE_DIRS}
)

qt5_use_modules (${APPS_LIB_UNVERSIONED} Network)

target_link_libraries (${APPS_LIB_UNVERSIONED}
  ${SCOPE_LIB_NAME}
  ${JSON_CPP_LDFLAGS}
  ${UNITY_SCOPES_LDFLAGS}
  ${UBUNTUONE_LDFLAGS}
  ${UBUNTU_DOWNLOAD_MANAGER_CLIENT_LDFLAGS}
  ${UBUNTU_DOWNLOAD_MANAGER_COMMON_LDFLAGS}
)

install(
  TARGETS ${APPS_LIB_UNVERSIONED}
  LIBRARY DESTINATION "${APPS_LIB_DIR}"
  )
